fix bottom padding (did not fit in 32px height)

--- a/Apps/SuperCRM/Client/css/labeledInput.css
+++ b/Apps/SuperCRM/Client/css/labeledInput.css
@@ -24,7 +24,8 @@
 	padding-left: 8px;
 	padding-right: 8px;
 	padding-top: 5px;
-	padding-bottom: 5px;
+    /*padding-bottom: 5px; this was causing scrollbar to show up*/
+    padding-bottom: 2px;
 
 /*	background-color: red;*/
 }
